@@ -104,6 +104,7 @@ function createServer(app, opts) {
             protocol: protocol,
             protocolVersion: req.httpVersion,
             requestMethod: req.method,
+            requestTime: new Date,
             serverName: serverName,
             serverPort: serverPort,
             pathInfo: uri.pathname,
@@ -141,6 +142,7 @@ function createServer(app, opts) {
  *   - protocol             The protocol being used (i.e. "http:" or "https:")
  *   - protocolVersion      The protocol version
  *   - requestMethod        The request method (e.g. "GET" or "POST")
+ *   - requestTime          A Date that indicates the time the request was received
  *   - serverName           The host name of the server
  *   - serverPort           The port number the request was made on
  *   - scriptName           The virtual location of the application
@@ -162,6 +164,7 @@ function makeEnv(opts) {
     env.protocol = opts.protocol || "http:";
     env.protocolVersion = opts.protocolVersion || "1.0";
     env.requestMethod = (opts.requestMethod || "GET").toUpperCase();
+    env.requestTime = opts.requestTime || new Date;
     env.serverName = opts.serverName || "";
     env.serverPort = opts.serverPort || (env.protocol == "https:" ? "443" : "80");
     env.scriptName = opts.scriptName || "";
