@@ -54,6 +54,8 @@ function checkEnv(env) {
         assert(typeof env[p] == "string", 'Property "' + p + '" must be a string');
     });
 
+    assert("requestTime" in env, 'Environment missing required property "requestTime"');
+
     // The environment must not contain the properties httpContentType or
     // httpContentLength (use contentType and contentLength instead).
     assert(typeof env.httpContentType == "undefined", 'Environment must not contain property "httpContentType", use "contentType" instead');
@@ -74,6 +76,9 @@ function checkEnv(env) {
 
     // - requestMethod must be a valid HTTP verb as an uppercase String
     assert((/^[A-Z]+$/).test(env.requestMethod), "Request method must be a valid HTTP verb");
+
+    // - requestTime must be a Date
+    assert(env.requestTime instanceof Date, "Request time must be a Date");
 
     // - scriptName, if not empty, should start with a "/"
     // - pathInfo should be "/" if scriptName is empty
