@@ -1,3 +1,7 @@
+= HEAD
+
+  * Added requestTime environment variable.
+
 = 0.5.3 / 2011-09-20
 
   * Removed multipart.File#unlink
